# MacchinarIO

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
includes/: account.h  accounts.h  chiper.h  consolecolors.h  cypher.h  data.h  lists.h  menus.h  storage.h  supremeio.h
src/: accounts.c  chiper.c  cypher.c  data.c  lists.c  main.c  program.c  storage.c  supremeio.c
src/menus/: accounts_view.c  commons.c  delete.c  main.c  register.c
